# internal-llm-gateway

./: .gitignore  LICENSE  README.md
admin-ui/: package.json
demo-client/: cli.py
docs/: api-spec.md  architecture.md
gateway-api/: pyproject.toml  requirements.txt
gateway-api/alembic/migrations/: env.py
gateway-api/alembic/migrations/versions/: f41bd05f7d53_initial_schema.py
gateway-api/app/: main.py
gateway-api/app/api/v1/: admin.py  chat.py  models.py  usage.py
gateway-api/app/core/: config.py  deps.py  metrics.py  redis.py
gateway-api/app/middleware/: correlation_id.py  metrics.py
gateway-api/app/providers/: base.py  gemini_adapter.py  mock_adapter.py  openai_adapter.py
gateway-api/app/schemas/: models.py
gateway-api/app/services/: auth.py  policy.py  pricing.py  rate_limit.py  redaction.py  routing.py  usage.py
gateway-api/tests/: test_chat.py  test_policy.py  test_pricing.py  test_rate_limit.py  test_redaction.py  test_routing.py
infra/: docker-compose.yml  prometheus.yml
